# eng-grammar-parse

./: README.md  TODO.md  grammar-keys.txt  main.py  pyproject.toml
content/exercies/: 13_participle-gerund-verbal-noun.txt  15_complex-subject.txt  16_conditional.txt  17_modal-verbs.txt  3_pronouns.json  4_quantifiers.json  5_comparable.json
content/keys/: 1_articles.txt  2_nouns.txt  4_quantifiers.json  5_comparable.json  grammar-keys-toc.json  grammar-keys.txt
core/: parse.py
data/: grammar-exercises-toc.json
data/exercies/: 10_infinitive.txt  14_complex-object.txt  6_prepositions.txt  9_indirect-speech.txt
data/topics/: 11_participle.txt  12_gerund.txt  1_articles.txt  2_nouns.txt  3_pronouns.txt  4_quantifiers.txt  5_comparable.txt  7_tenses.txt  8_passive-voice.txt
tests/: test_parse.py
