[tool.poetry]
name = "eng-grammar-parse"
version = "0.1.0"
description = ""
authors = ["potykion <potykion@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyPDF2 = "^1.26.0"
PyPDF4 = "^1.27.0"
pdfrw = "^0.4"
pdfminer = "^20191125"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
